--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
   <script>
     Quiz.init();
   </script>
+  <style>
+    li[data-state="active"] {
+      font-weight: bold;
+    }
+  </style>
 </head>
 <body>
 
