--- a/question.html
+++ b/question.html
@@ -1,3 +1,5 @@
+<p>Question <span id="current">0</span> of <span id="total">{{ questionCount }}</span></p>
+
 <h2>Loading...</h2>
 
 <ul id="answers"></ul>
